# Learning

./: .drone.yml  .wordlist.txt  EnTest.c  FaTest.c  README.md  Socket.php  Test.c  spellcheck.yaml
.ci/: go.sh  rush.sh
.circleci/: config.yml
ARM/: README.md
AVR/: README.md
Assembly/: Make.sh  README.md  test.s
C/: Make.sh  README.md
C++/: .gitignore  AlterFunctionSyntax.cpp  Array.cpp  Auto.cpp  AutoComplete.cpp  Bind.cpp  Bitset.cpp  EOF.cpp  FarPointer.c  Generate.cpp  Gprof.c  Gprof.txt  IO.cpp  Inner Class.cpp  IntWraper.cpp  LambdaExpressions.cpp  LexicographicalCompare.cpp  Linked List.cpp  Loop.c  LoopOnCPU0.c  MAlloc.cpp  Make.sh  Makefile  Map.cpp  MulitMap.cpp  Pair.cpp  Pointer.c  Priority.c  ProcessUserID.c  Queue.cpp  RandomNumber.cpp  RangeBaseLoop.cpp  STLAlgorithm.cpp  Seek.c  SharedMemoryProducer.c  Singleton.cpp  String.cpp  Test.c  ThreadTest.c  TypedefVsUsing.cpp  (+4 more)
C/autodemo/: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.ac  configure.scan  hello.c
C/autodemo/autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
Erlang/: area.erl  fib.erl  hello.erl  sum.erl
Firewall/: iptabels-1.xml  iptabels.sh
Go/: .gitignore  README.md
Haskell/: begin.hs
JS/: .gitignore
MATLAB/: Measurement-1.m  helloworld.m
ML/: .gitignore  pyproject.toml  requirements.txt
ML/fun-scikit/: DT.ipynb  linears.ipynb  logistic-regression.py  lr.py  perceptron.ipynb
ML/housing/: Housing.ipynb  housing.csv.REMOVED.git-id
ML/perceptron/: perceptron.py
NodeJS/: README.md
PHP/: Function.php  Proxy.php
Python/: .gitignore  README.md
Ruby/: funny.rb  hello.rb  person.rb
SML/: Lisp-Like.sml  List.sml  fact.sml  pass-by-ref.sml  pass-by-value-result.sml  pass-by-value.sml  reduce.sml  ref.sml  swap.sml  tree.sml
Scheme/: odd.scm
Shell/: MakeProject.bash  PullMusic.bash  PushMusic.bash  README.md  Renamer.bash  chert-2-2.sh  chert-2-3.sh  chert-2-4.sh  chert-2-6.sh  chert-2-7.sh  chert4.bash  chert7.bash  errlib.bash  lsdisk.bash  lsdisk.sh  (+2 more)
python/kafka/: main.py  pyproject.toml
python/mongodb/: main.py  pyproject.toml
(+1356 files in other folders)
