[tool.poetry]
name = "ml"
version = "0.1.0"
description = "Learn Machine Learning"
authors = ["Parham Alvani <parham.alvani@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.0"
scikit-learn = "^0.23.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
