[tool.poetry]
name = "kafka"
version = "0.1.0"
description = ""
authors = ["Parham Alvani <parham.alvani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
confluent-kafka = "^1.9.0"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
