[tool.poetry]
name = "mongodb"
version = "0.1.0"
description = "Insert random data into Mongodb"
authors = ["Parham Alvani <parham.alvani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
